--- a/2018-07-25_ical_ii/bin/ical4j.properties
+++ b/2018-07-25_ical_ii/bin/ical4j.properties
@@ -11,3 +11,5 @@ net.fortuna.ical4j.factory.encoder=net.fortuna.ical4j.util.DefaultEncoderFactory
 net.fortuna.ical4j.recur.maxincrementcount=1000
 
 net.fortuna.ical4j.timezone.cache.impl=net.fortuna.ical4j.util.MapTimeZoneCache
+
+//testing gitignore
