Proof-of-concepts

--- a/2018-07-25_ical_ii/.project
+++ b/2018-07-25_ical_ii/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2018-07-25_ical_ii</name>
+	<name>2018-07-25_appointments</name>
 	<comment></comment>
 	<projects>
 	</projects>
