--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,11 @@
 			<artifactId>biweekly</artifactId>
 			<version>0.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.16</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
